--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: gkfont;
-	src: url('file:///storage/emulated/0/Thor/Font/Product%20Sans%20Regular.ttf');
+	src: url('Vonique 64.ttf');
 }
 
 * {
