--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-@font-face {
-	font-family: gkfont;
-	src: url('Vonique 64.ttf;');
-}
+@import url('https://fonts.googleapis.com/css?family=Dosis|Nunito&display=swap');
 
 * {
 	box-sizing: border-box;
@@ -13,7 +10,7 @@
 body {
 	background: #fefefe;
 	color: #353535;
-	font-family: 'gkfont';
+	font-family: Nunito', sans-serif;
          font-size: 16px;
 }
 
@@ -270,7 +267,7 @@ img {
   .crdContent {
      margin-top: 40px;
      padding:0.5em;
-     font-family:'gkfont';
+     font-family:'Dosis', sans-serif;
      
     
   }
