--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
 	background: #fefefe;
 	color: #353535;
-	font-family: Nunito', sans-serif;
+	font-family: 'Nunito', sans-serif;
          font-size: 16px;
 }
 
